# adder-splitter-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: DESIGN.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_room_activity.py  0003_user_current_room.py
src/: config.py  main.py
src/application/: dto.py  interfaces.py
src/application/services/: _access.py  balance_service.py  expense_service.py  member_service.py  room_service.py  user_service.py
src/domain/: entities.py  enums.py  exceptions.py  limits.py  value_objects.py
src/domain/services/: settlement.py  split.py
src/infrastructure/db/: models.py  session.py
src/infrastructure/db/repositories/: expense_repo.py  participant_repo.py  room_repo.py  user_repo.py
src/presentation/bot/: callbacks.py  cleanup.py  formatters.py  notifications.py  states.py  texts.py  utils.py
src/presentation/bot/handlers/: balance.py  common.py  expenses.py  members.py  quick_add.py  rooms.py  start.py
src/presentation/bot/keyboards/: balance.py  expense.py  menu.py  room.py
src/presentation/bot/middlewares/: di.py  user_upsert.py
tests/domain/: test_settlement.py  test_split.py
tests/integration/: conftest.py  test_services.py
tests/presentation/: test_quick_parse.py
