[project]
name = "adder-splitter"
version = "0.1.0"
description = "Telegram-бот для совместного учёта расходов"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.15",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "redis>=5.2",
    "sqlalchemy[asyncio]>=2.0.36",
]

[dependency-groups]
dev = [
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C4", "RUF"]
# RUF001-003: «неоднозначные» юникод-символы — проект русскоязычный
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
files = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
